[workspace]
members = [
    "crates/better-std-core",
    "crates/better-std-alloc",
    "crates/better-std-collections",
    "crates/better-std-sync",
    "crates/better-std-io",
    "crates/better-std-fs",
    "crates/better-std-os",
    "crates/better-std-sys",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["l0w.Kn1ght"]
license = "MIT"
repository = "https://github.com/l0wkn1ght/better-std"

[workspace.metadata.docs.rs]
all-features = true